--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+html {
+  scroll-behavior: smooth;
+}
+
 *{
     background: #080808;
-    margin: 0px;
+    margin: 20px;
     padding: 0px;
 }
 
@@ -8,7 +12,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: wrap;    
 }
 
 nav img{
@@ -20,20 +24,21 @@ nav ul li{
     display: inline;
     list-style: none;
     margin: 10px 20px;
+    
 }
 
 nav ul li a{
     text-decoration: none;
     color:#fff;
-    font-size: 24px;
-    /* border-bottom: 2.5px solid #ff004f; */
+    font-size: 18px;
+    font-family: cursive;
+    transition: color 0.5s;
     
 }
 
 nav ul li a:hover {
-    background-color: #fff;
+    color: #b80254;
     opacity: 1px;
-    color: #080808;
 
 }
 
@@ -41,7 +46,6 @@ nav ul li a:hover {
    
     margin-top: 10%;
     color: #fff;
-    margin-left: 10rem;
     font-size: 30px;
 
 }
@@ -74,8 +78,6 @@ nav ul li a:hover {
   color: #b80254;
 }
 
-
-
  .heading{
   font-family: cursive;
   margin-top: 10rem;
@@ -90,29 +92,22 @@ nav ul li a:hover {
 
 }
 
-.Contain{
+.projectsContainer{
+  /* border: 5px solid #ffffff; */
 
-  padding:20px 9%;
-  padding-bottom: 100px;
-}
-
-.box-container{
-  
-  display: grid;
-  
-  /* grid-template-columns: repeat(auto-fit, minmax(270px, 1fr)); */
-  grid-template-columns: auto auto auto ;
-  gap:1px;
-  
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .box img{
-  
-  border: 5px double #fff;
-  margin-top: 5rem;
-  margin-left:10px;
-  max-width: 20rem;
-  max-height: 23rem;
+  border-radius: 20px;
+  border: 4px double #c9c9c9;
+  margin: 8px;
+  width: 645px;
+  align-items: center;
   transition: transform 0.5s;
 }
 
